# boilerplate-drf

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml
apps/: conftest.py
apps/api/: exception_handlers.py  pagination.py
apps/api/v1/: urls.py
apps/library_example/: apis.py  apps.py  models.py  serializers.py  services.py  urls.py
apps/library_example/docs/: api.py
apps/library_example/tests/: factories.py  test_services.py
apps/school_example/: apis.py  apps.py  constants.py  models.py  serializers.py  urls.py
apps/school_example/docs/: api.py
apps/school_example/migrations/: 0001_initial.py  0002_roster_created_at_roster_updated_at_and_more.py  0003_school_is_active.py
apps/school_example/services/: rosters.py  school_courses.py  schools.py  students.py
apps/school_example/tests/: factories.py
apps/school_example/tests/services/: test_rosters.py  test_school_courses.py  test_schools.py  test_students.py
django_project/: custom_db_connections.py  urls.py  wsgi.py
django_project/extra_settings/: drf_spectacular.py
django_project/settings/: base.py  local.py  test.py
docker/mongo/conf.d/: mongod.conf
docker/mysql/conf.d/: my.cnf
